# pqf

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docs.yml  python-package.yml  test.yml
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/_templates/: base.rst  class.rst  function.rst  module.rst
docs/source/: conf.py  index.rst
example/data/: btc_bars_example.parquet
pqf/: utils.py
pqf/indicator/: momentum.py  momentum.pyi  moving_average.py  moving_average.pyi  util.py
pqf/indicators/: momentum.py  momentum.pyi  moving_average.py  moving_average.pyi  util.py
pqf/order/: slippage.py  slippage.pyi
pqf/pricing/: core.py  utils.py
pqf/research/: __init__.py  alpha.py  factor.py  statistics.py
tests/: test_pricing.py  test_utils.py
tests/test_indicator/: test_momentum.py  test_moving_averages.py  test_statistics.py  test_util.py
tests/test_indicators/: test_momentum.py  test_moving_averages.py  test_util.py
tests/test_order/: test_simple_slippage.py
tests/test_performance/: test_statistics.py
tests/test_research/: test_alpha.py  test_factor.py  test_statistics.py
typings/pqf/: utils.pyi
typings/pqf/indicator/: momentum.pyi  moving_average.pyi  util.pyi
typings/pqf/order/: __init__.pyi  slippage.pyi
typings/pqf/research/: statistics.pyi
