[project]
name = "pqf"
version = "0.0.1"
description = "Python Quant Finance Library"
authors = [{ name = "RobertLD", email = "rlderienzo@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "polars>=1.9.0",
    "numba>=0.60.0",
    "pyright>=1.1.384",
]

[project.optional-dependencies]
dev = ["pytest>=6.0.0", "ruff>=0.6.9", "pytest-mock", "pre-commit>=4.0.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pylance]
ignore = [
    "**/typings",
    '.cache/*',
    ".*",
    "__*",
    "**/typings",
    '**/.cache/**/*',
    "**/pypoetry/**/*",
]
exclude = [".*", "__*", "**/typings", '**/.cache/**/*', "**/pypoetry/**/*"]

typeCheckingMode = "basic"
stubPath = "typings"
pythonPlatform = "Linux"

reportMissingModuleSource = "none"
reportUnnecessaryTypeIgnoreComment = "error"
reportPrivateImportUsage = false
reportUndefinedVariable = false

[tool.ruff]
fix = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
